# moodhaven-journal

./: .eslintrc.json  .gitignore  .gitleaks.toml  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  HANDOFF-a11y.md  HANDOFF-accessibility.md  HANDOFF-architecture-docs.md  HANDOFF-dep-modernization.md  HANDOFF-deps.md  HANDOFF-perf-audit.md  HANDOFF-perf-bundle-audit.md  HANDOFF-perf.md  HANDOFF-security-hardening.md  HANDOFF-security.md  HANDOFF-test-coverage-raise.md  HANDOFF-tests.md  HISTORY.md  LICENSE  Makefile  PLAN-animations.md  PLATFORMS.md  Prompts.md  README.MD  README.md  REPO-HEALTH-2026-06-06.md  SECURITY-AUDIT-2026-06-06.md  SECURITY-AUDIT-2026-06-07.md  SECURITY.md  TODOS.md  WEBSITE-POLISH-2026-06-06.md  index.html  knip.json  node_modules  package-lock.json  package.json  sonar-project.properties  (+5 more)
.github/: FUNDING.yml  dependabot.yml
active-plans/: activity-tagging.md  android-1-0-review.md  android-companion-polish.md  android-standalone.md  auth-friction-reduction.md  change-password-security-review.md  change-password.md  chore-lib-restructure.md  chore-plans-consolidation.md  crash-replay-harness.md  feat-android-companion-polish.md  feat-log-level-selector.md  future_work.md  ios-app-v2-0.md  mood-analytics.md  post-1.8.0-roadmap.md  pr-merge-plan.md  refactor-settings-and-capsule-tests.md  roadmap-v1.0.md  security-at-rest-fixes.md  stillhaven-module.md  stt-multi-isa-runtime-dispatch.md  v1.1.0-android.md  vacation-sprints.md  wear-os-brand-alignment.md  writing-experience-customization.md
ceo-plans/: 2026-03-23-retro-hardening.md
docs/: TRANSPARENCY.md  architecture.md  browser-pwa-mode.md  howto-activity-tagging.md  howto-getting-started.md  howto-mood-analytics.md  howto-password-managers.md  howto-stillhaven.md  howto-time-capsule.md  local-peer-sync-plan.md  peer-sync-security.md  speech-to-text.md  tauri-commands.md  threat-model.md  watch-app-phases.md  watch-companion.md
plans/: feat-logging-debug.md  rename-moodhaven-journal.md
public/: manifest.webmanifest
retros/: 2026-06-12.md  2026-06-19.md
scripts/: ai_code_scan.py  build-whisper.ps1  build-whisper.sh  check-versions.sh  crash-replay.sh  dev-peer2.sh  dev.sh  gen-tauri-settings-gradle.py  generate-checksums.cjs  generate-checksums.js  mock-peer.py  pentest.sh  push-wiki.sh  security_audit.py  submit-virustotal.cjs  sync-android-settings.sh  test-signals.sh  update-latest-release-json.cjs  update-readme-release.cjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  audit.toml  binaries  build.rs  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: whisper-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json  ios.json  writer.json
src-tauri/examples/: crash_probe.rs  verify_key.rs
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/permissions/biometric/autogenerated/: reference.toml
src-tauri/permissions/opener/autogenerated/: reference.toml
src-tauri/permissions/securekey/autogenerated/: reference.toml
src-tauri/permissions/wear/autogenerated/: reference.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: activities.rs  analytics.rs  biometric.rs  books.rs  change_password.rs  cloud_providers.rs  data_management.rs  hardware_key.rs  journal.rs  media.rs  mod.rs  oura.rs  peer_discovery.rs  peer_identity.rs  peer_pairing.rs  peer_sync_engine.rs  pin_unlock.rs  session_bridge.rs  settings.rs  signals.rs  speech_to_text.rs  still.rs  sync.rs  time_capsule.rs  two_factor.rs  updater.rs  voice_memos.rs  writer_window.rs
src-tauri/src/commands/peer_sync_engine/: conflict.rs  connection.rs  crypto.rs  mod.rs  protocol.rs
src-tauri/src/db/: activities.rs  analytics.rs  books.rs  crash_replay.rs  journal.rs  mod.rs  schema.sql  signals.rs  still.rs  voice_memos.rs
staging/: browser-additions.ts  browser-invoke.test.ts  browser-invoke.ts
website/: .eslintrc.json  CLAUDE.md  CONTENT-QUEUE.md  (+6 more)
(+613 files in other folders)
