[package]
name = "moodbloom"
version = "0.4.0"
description = "A calm, secure mood tracking and journaling app"
authors = ["MoodBloom"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "moodbloom_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
base64 = "0.21"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
data-encoding = "2"
sha2 = "0.10"
rand = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
