[package]
name = "moodbloom"
version = "0.7.0"
description = "A calm, secure mood tracking and journaling app"
authors = ["MoodBloom"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "moodbloom_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# Enable native FIDO2/CTAP2 hardware key support
# Requires system dependencies:
# - Linux: libudev-dev (sudo apt-get install libudev-dev)
# - Windows: No additional dependencies
# - macOS: No additional dependencies
hardware-key = ["dep:ctap-hid-fido2", "dep:argon2"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
base64 = "0.21"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
data-encoding = "2"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# FIDO/Hardware Key support (native, not WebAuthn) - optional
ctap-hid-fido2 = { version = "3", optional = true }
argon2 = { version = "0.5", optional = true }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
mdns-sd = "0.11"
flume = "0.11"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
